Adjust and prepare jupyter notebooks for use

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -26,6 +26,7 @@
         "## Outputs\n",
         "\n",
         "* EDA_Report.html\n",
+        "* EDA_Report_converted.html\n",
         "* Android_Malware_converted.csv\n",
         "\n",
         "## Additional Comments\n",
@@ -68,6 +69,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-mavJ8DibrcQ"
       },
@@ -104,6 +112,13 @@
         "# Settings\n",
         "%matplotlib inline\n",
         "sns.set(style=\"whitegrid\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
