--- a/jupyter_notebooks/04 - FeatureEngineering.ipynb
+++ b/jupyter_notebooks/04 - FeatureEngineering.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD HERE THE NOTEBOOK NAME)**"
+        "# **FEATURE ENGINEERING NOTEBOOK**"
       ]
     },
     {
@@ -51,63 +51,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wZfF_j-Bz3i4",
-        "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MWW8E7lz3i7"
-      },
-      "source": [
-        "We want to make the parent of the current directory the new current directory\n",
-        "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
-      },
-      "outputs": [],
-      "source": [
-        "os.chdir(os.path.dirname(current_dir))\n",
-        "print(\"You set a new current directory\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M_xPk_Ijz3i-"
-      },
-      "source": [
-        "Confirm the new current directory"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -116,8 +59,13 @@
       },
       "outputs": [],
       "source": [
-        "current_dir = os.getcwd()\n",
-        "current_dir"
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Resolve the project root\n",
+        "project_root = Path.cwd()\n",
+        "if project_root.name == \"jupyter_notebooks\":\n",
+        "    project_root = project_root.parent"
       ]
     },
     {
@@ -126,14 +74,21 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "# Import Libraries"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
+        "In this section, all necessary standard libaries are imported to allow using their functions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Import Libraries with necessary Settings"
       ]
     },
     {
@@ -141,7 +96,17 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Standard libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Settings\n",
+        "%matplotlib inline\n",
+        "sns.set(style=\"whitegrid\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,14 +123,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "# Load Converted Dataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "In this section, the converted Dataset is loaded to be able to access the prepared data."
       ]
     },
     {
@@ -173,7 +138,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "df_converted = pd.read_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware.csv\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -186,16 +153,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
+        "# Save Files"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -210,31 +174,14 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "# Conclusion and Next Steps"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* In case you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "  print(e)\n"
+        "* "
       ]
     }
   ],
@@ -245,11 +192,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -262,7 +207,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Nov  7 2022, 16:45:55) \n[GCC 9.4.0]"
+      "version": "3.12.8"
     },
     "orig_nbformat": 2
   },
