--- a/jupyter_notebooks/06 - ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06 - ModelEvaluation.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **DATA CLEANING NOTEBOOK**"
+        "# **MODEL EVALUATION NOTEBOOK**"
       ]
     },
     {
