Split dataset into train and test sets in Feature Engineering notebook and adjust save file paths

--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -47,55 +47,7 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "Change the working directory from its current folder to its parent folder\n",
-        "* Access the current directory with os.getcwd()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wZfF_j-Bz3i4",
-        "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MWW8E7lz3i7"
-      },
-      "source": [
-        "Make the parent of the current directory the new current directory\n",
-        "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
-      },
-      "outputs": [],
-      "source": [
-        "os.chdir(os.path.dirname(current_dir))\n",
-        "print(\"You set a new current directory\")"
+        "# Set Project Root Directory"
       ]
     },
     {
@@ -104,20 +56,22 @@
         "id": "M_xPk_Ijz3i-"
       },
       "source": [
-        "Confirm the new current directory"
+        "Centralise the base path using project_root"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "vz3S-_kjz3jA",
-        "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "current_dir = os.getcwd()\n",
-        "current_dir"
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Resolve the project root\n",
+        "project_root = Path.cwd()\n",
+        "if project_root.name == \"jupyter_notebooks\":\n",
+        "    project_root = project_root.parent"
       ]
     },
     {
@@ -272,7 +226,7 @@
         "import pandas as pd\n",
         "\n",
         "# Load dataset\n",
-        "df = pd.read_csv(f\"inputs/datasets/raw/Android_Malware.csv\")\n",
+        "df = pd.read_csv(Path.cwd().parent / \"inputs\" / \"datasets\" / \"raw\" / \"Android_Malware.csv\")\n",
         "\n",
         "# Show first 5 rows of dataset\n",
         "df.head()"
