--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -49,7 +49,14 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "# Set Project Root Directory"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Centralise the base path using project_root"
       ]
     },
     {
@@ -236,8 +243,9 @@
         "profile.to_notebook_iframe()\n",
         "\n",
         "# Save Report in Outputs Folder (create if not existing)\n",
-        "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
-        "profile.to_file(Path.cwd().parent / \"outputs\" / \"eda\" / \"EDA_Report.html\")"
+        "profile_path = project_root / \"outputs\" / \"eda\"\n",
+        "os.makedirs(profile_path, exist_ok=True)\n",
+        "profile.to_file(profile_path / \"EDA_Report.html\")"
       ]
     },
     {
@@ -468,8 +476,9 @@
         "df_converted = df.copy()\n",
         "\n",
         "# Save converted dataframe as csv file for easier later access of converted data\n",
-        "os.makedirs(\"outputs/data\", exist_ok=True)\n",
-        "df_converted.to_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware_converted.csv\", index=False)\n",
+        "data_path = project_root / \"outputs\" / \"data\"\n",
+        "os.makedirs(data_path, exist_ok=True)\n",
+        "df_converted.to_csv(data_path / \"Android_Malware_converted.csv\", index=False)\n",
         "\n",
         "print(\"✅ Saved converted dataframe as copy of original\")\n",
         "print(\"✅ Saved converted dataframe to outputs/data/\")"
@@ -732,7 +741,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Check Class Balance"
+        "Check Class Distribution"
       ]
     },
     {
@@ -745,6 +754,15 @@
         "print(df_converted['Label_encoded'].value_counts(normalize=True))\n",
         "sns.countplot(x='Label_encoded', data=df_converted)\n",
         "plt.title('Class Distribution')\n",
+        "\n",
+        "# Define path and save figure for later use\n",
+        "figures_path = project_root / \"outputs\" / \"eda\" / \"figures\"\n",
+        "os.makedirs(figures_path, exist_ok=True)\n",
+        "\n",
+        "plt.savefig(figures_path / \"class_distribution.png\", dpi=300)\n",
+        "print(\"✅ Saved correlation heatmap to outputs/eda/figures\")\n",
+        "\n",
+        "# Show figure\n",
         "plt.show()"
       ]
     },
@@ -798,9 +816,10 @@
         "profile = ProfileReport(df=df_converted, minimal=True)\n",
         "profile.to_notebook_iframe()\n",
         "\n",
-        "# Save Report in Outputs Folder (create if not existing)\n",
-        "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
-        "profile.to_file(Path.cwd().parent / \"outputs\" / \"eda\" / \"EDA_Report_converted.html\")"
+        "# Save Report in Outputs Folder\n",
+        "profile_path = project_root / \"outputs\" / \"eda\"\n",
+        "os.makedirs(profile_path, exist_ok=True)\n",
+        "profile.to_file(profile_path / \"EDA_Report_converted.html\")"
       ]
     },
     {
