--- a/jupyter_notebooks/03 - DataCleaning.ipynb
+++ b/jupyter_notebooks/03 - DataCleaning.ipynb
@@ -47,7 +47,14 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "# Set Project Root Directory"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Centralise the base path using project_root"
       ]
     },
     {
@@ -466,8 +473,9 @@
       "outputs": [],
       "source": [
         "# Save cleaned dataframe as csv file for easier access of cleaned data\n",
-        "os.makedirs(\"outputs/data\", exist_ok=True)\n",
-        "df_clean.to_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware_cleaned.csv\", index=False)\n",
+        "data_path = project_root / \"outputs\" / \"data\"\n",
+        "os.makedirs(data_path, exist_ok=True)\n",
+        "df_clean.to_csv(data_path / \"Android_Malware_cleaned.csv\", index=False)\n",
         "\n",
         "print(\"✅ Saved cleaned dataframe to outputs/data/\")"
       ]
