Set up helper and training function for models in Model Development Notebook

--- a/jupyter_notebooks/05 - ModelDevelopment.ipynb
+++ b/jupyter_notebooks/05 - ModelDevelopment.ipynb
@@ -47,7 +47,14 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "# Set Project Root Directory"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Centralise the base path using project_root"
       ]
     },
     {
@@ -102,10 +109,19 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import joblib\n",
         "\n",
         "# Settings\n",
         "%matplotlib inline\n",
-        "sns.set(style=\"whitegrid\")"
+        "sns.set(style=\"whitegrid\")\n",
+        "\n",
+        "# ML libraries\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from xgboost import XGBClassifier\n",
+        "\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score"
       ]
     },
     {
@@ -123,14 +139,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Load Converted Dataset"
+        "# Load Train & Test Sets"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, the converted Dataset is loaded to be able to access the prepared data."
+        "In this section, the train and test sets are loaded to be able to access the prepared data."
       ]
     },
     {
@@ -139,7 +155,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_converted = pd.read_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware.csv\")"
+        "data_path = project_root / \"outputs\" / \"data\"\n",
+        "\n",
+        "X_train = pd.read_csv(data_path / \"X_train.csv\")\n",
+        "X_test = pd.read_csv(data_path / \"X_test.csv\")\n",
+        "y_train = pd.read_csv(data_path / \"y_train.csv\").values.ravel()\n",
+        "y_test = pd.read_csv(data_path / \"y_test.csv\").values.ravel()"
       ]
     },
     {
@@ -153,13 +174,133 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Save Files"
+        "# Model Development"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Helper Function for Training Models"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Train and quickly evaluate any given model\n",
+        "def train_and_evaluate(model, model_name):\n",
+        "    print(f\"\\n🧪 {model_name}\")\n",
+        "    model.fit(X_train, y_train)\n",
+        "    predictions = model.predict(X_test)\n",
+        "\n",
+        "    acc = accuracy_score(y_test, predictions)\n",
+        "    print(\"✅ Accuracy:\", round(acc, 4))\n",
+        "    print(\"📉 Confusion Matrix:\\n\", confusion_matrix(y_test, predictions))\n",
+        "    print(\"📋 Classification Report:\\n\", classification_report(y_test, predictions))\n",
+        "\n",
+        "    return model, acc"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train Multiple Models"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To start, multiple models are trained with different algorithms to find the best one for this data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Logistic Regression\n",
+        "logreg = LogisticRegression(max_iter=2000, random_state=42)\n",
+        "train_and_evaluate(logreg, \"Logistic Regression\")\n",
+        "\n",
+        "# Random Forest\n",
+        "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "train_and_evaluate(rf, \"Random Forest\")\n",
+        "\n",
+        "# Linear Support Vector Classifier\n",
+        "linear_svc = LinearSVC(max_iter=10000)\n",
+        "train_and_evaluate(linear_svc, \"Linear Support Vector Classifier\")\n",
+        "\n",
+        "# XGBoost\n",
+        "xgb = XGBClassifier(use_label_encoder=False, eval_metric='mlogloss', random_state=42)\n",
+        "train_and_evaluate(xgb, \"XGBoost\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save Files"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Save Best Performing Default Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Replace rf with chosen model\n",
+        "best_model = rf\n",
+        "\n",
+        "models_path = project_root / \"models\"\n",
+        "os.makedirs(models_path, exist_ok=True)\n",
+        "joblib.dump(best_model, models_path / \"best_model.pkl\")\n",
+        "\n",
+        "print(\"✅ Saved best model to /models/\")"
+      ]
     },
     {
       "cell_type": "markdown",
