Create visualisations of model evaluation in Model Evaluation notebook

--- a/jupyter_notebooks/06 - ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06 - ModelEvaluation.ipynb
@@ -103,6 +103,9 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
+        "import joblib\n",
+        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+        "\n",
         "# Settings\n",
         "%matplotlib inline\n",
         "sns.set(style=\"whitegrid\")"
@@ -123,14 +126,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Load Converted Dataset"
+        "# Load Model Evaluation Results & Train and Test Sets"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, the converted Dataset is loaded to be able to access the prepared data."
+        "In this section, the model evaluation results are loaded to be able to access the prepared data."
       ]
     },
     {
@@ -139,7 +142,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_converted = pd.read_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware.csv\")"
+        "evaluation_path = project_root / \"outputs\" / \"evaluation\"\n",
+        "\n",
+        "df_training = pd.read_csv(evaluation_path / \"model_training_results.csv\")\n",
+        "df_tuning = pd.read_csv(evaluation_path / \"model_tuning_results.csv\")\n",
+        "df_fe = pd.read_csv(evaluation_path / \"best_model_fe_results.csv\")\n",
+        "df_final = pd.read_csv(evaluation_path / \"best_model_final_results.csv\")\n",
+        "\n",
+        "\n",
+        "data_path = project_root / \"outputs\" / \"data\"\n",
+        "\n",
+        "X_test = pd.read_csv(data_path / \"X_test.csv\")\n",
+        "X_test_scaled = pd.read_csv(data_path / \"X_test_scaled.csv\")\n",
+        "X_train = pd.read_csv(data_path / \"X_train.csv\")\n",
+        "X_train_resampled = pd.read_csv(data_path / \"X_train_resampled.csv\")\n",
+        "X_train_scaled = pd.read_csv(data_path / \"X_train_scaled.csv\")\n",
+        "y_test = pd.read_csv(data_path / \"y_test.csv\")\n",
+        "y_train = pd.read_csv(data_path / \"y_train.csv\")\n",
+        "y_train_resampled = pd.read_csv(data_path / \"y_train_resampled.csv\")"
       ]
     },
     {
@@ -153,13 +173,196 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Save Files"
+        "# Prepare Results for Visualisation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Add a column to indicate the stage\n",
+        "df_training['stage'] = 'Baseline'\n",
+        "df_tuning['stage'] = 'Tuning'\n",
+        "df_fe['stage'] = 'Feature Engineering'\n",
+        "df_final['stage'] = 'Final Test'\n",
+        "\n",
+        "# Combine all into one\n",
+        "df_all = pd.concat([df_training, df_tuning, df_fe, df_final], ignore_index=True)\n",
+        "\n",
+        "# Clean model names\n",
+        "df_all['Model'] = df_all['Model'].str.replace(\"_\", \" \").str.title()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Visualisations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Set general file path for saving plots"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "figure_path = project_root / \"outputs\" / \"eda\" / \"figures\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Plot Metric Comparisons by Stage"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "metrics = ['Accuracy', 'Balanced Accuracy', 'F1 Macro', 'F1 Weighted']\n",
+        "\n",
+        "for metric in metrics:\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    sns.barplot(data=df_all, x=metric, y='Model', hue='stage', palette='Set2')\n",
+        "    plt.title(f\"{metric.replace('_', ' ').title()} by Model and Stage\")\n",
+        "    plt.xlabel(metric.title())\n",
+        "    plt.ylabel(\"Model\")\n",
+        "    plt.legend(title=\"Evaluation Stage\")\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(figure_path / f\"models_{metric}_stage_comparison.png\")\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Plot Confusion Matrix for Final Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load final model and test data\n",
+        "final_model_path = project_root / \"outputs\" / \"ml_pipeline\" / \"default_best_model.pkl\"\n",
+        "final_model = joblib.load(final_model_path)\n",
+        "\n",
+        "# Predict\n",
+        "y_pred = final_model.predict(X_test_scaled)\n",
+        "\n",
+        "# Confusion matrix\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=final_model.classes_)\n",
+        "\n",
+        "# Plot and save\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "disp.plot(cmap=\"Blues\", values_format='d')\n",
+        "plt.title(\"Confusion Matrix: Final Random Forest\")\n",
+        "plt.savefig(figure_path / \"final_model_confusion_matrix.png\")\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Plot Feature Importance for Final Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Get feature importances\n",
+        "feature_importances = final_model.feature_importances_\n",
+        "feature_names = X_train_resampled.columns  # match features to importance\n",
+        "\n",
+        "# Create DataFrame\n",
+        "df_feat_imp = pd.DataFrame({\n",
+        "    'feature': feature_names,\n",
+        "    'importance': feature_importances\n",
+        "}).sort_values(by='importance', ascending=False)\n",
+        "\n",
+        "# Plot top 15\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.barplot(data=df_feat_imp.head(15), x='importance', y='feature', palette='viridis')\n",
+        "plt.title(\"Top 15 Feature Importances - Final Random Forest\")\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(figure_path / \"final_feature_importances.png\")\n",
+        "plt.show()"
+      ]
     },
     {
       "cell_type": "markdown",
